# tk

./: AGENT.md  Cargo.toml  c.sh
client/: Cargo.toml
client/src/: main.rs
client/src/input/: mod.rs
client/src/render/: mod.rs
client/src/sync/: mod.rs
client/src/ui/: mod.rs
common/: Cargo.toml
common/src/: data.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/tick/: mod.rs
