[workspace]

resolver = "2"
members = ["client", "common", "server"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[workspace.dependencies]
bevy = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
bevy_renet2 = { version = "0.10.0", features = ["netcode", "native_transport"] }
