[workspace]

resolver = "2"
members = ["client", "common", "server"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[workspace.dependencies]
bevy = "0.18"
bevy_renet2 = { version = "0.15.0", features = ["netcode", "native_transport"] }
bevy_rapier3d = { version = "0.34.0", features = ["simd-stable"] }
rkyv = { version = "0.8.12", features = ["bytecheck"] }
bytes = "1"
