[package]
name = "client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
bevy = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
bevy_renet2 = { version = "0.10.0", features = ["netcode", "native_transport"] }
dotenvy_macro = "0.15.7"
