[package]
name = "client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
bevy = { workspace = true }
serde = { workspace = true }
bevy_renet2 = { workspace = true }
dotenvy_macro = "0.15.7"
rand = "0.9.1"
