[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
bevy_renet2 = { version = "0.10.0", features = ["netcode", "native_transport"] }
bincode = "2.0.1"
