[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
bevy_renet2 = { workspace = true }
bevy_rapier3d = { workspace = true }
bytes = { workspace = true }
rkyv = { workspace = true }
